# simple_backend

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: deploy-development.yml
backend/apps/clients/: admin.py  apps.py  exceptions.py  models.py  repository.py  serializers.py  services.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  0002_client_phone_number_alter_client_message.py
backend/apps/core/: enums.py  tasks.py
backend/apps/core/utils/: __init__.py  anymail.py  caches.py  decorators.py  itsdangerous.py  paginator.py  repository.py  requests.py  responses.py
backend/apps/maillisting/: admin.py  apps.py  models.py  repository.py  services.py
backend/apps/maillisting/migrations/: 0001_initial.py
backend/apps/maillisting/templates/emails/: mailing_list.html
backend/apps/mailsender/: admin.py  apps.py  models.py
backend/apps/mailsender/migrations/: 0001_initial.py
backend/apps/user/: urls.py
backend/apps/user/fixtures/: user.json
backend/config/: celery.py  urls.py
backend/config/settings/: base.py
docker/: Dockerfile  dev.Dockerfile  docker-compose-dev.yml  docker-compose-local.yml
env_files/: example.env
nginx/dev/: default.conf
terraform/dev/: main.tf
